Updating index and style

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
 
     <header>
-      <div></div>
+      <div><img src="./assets/images/logo.svg"></div>
       <div></div>
     </header>
     <!--Page title-->
@@ -44,15 +44,28 @@
       <h1>Skills summary</h1>
       <p>Text here</p>
     </section>
-    <!--Employment History-->
+    <!--Recent employment-->
     <section>
-      <h1>Employment History</h1>
-      <p>Text here</p>
+      <h1>Recent Employment</h1>
+      <ul>
+        <li>2018+, Digital Supporter & Platform Trainer, University of Bath</li>
+        <li>2012 - 2017, Programme Officer at University of Bath</li>
+      </ul>
+      <h2>Voluntary roles</h2>
+      <ul>
+        <li>2016+, Trustee, Black Swan Arts</li>
+        <li>2013 - 2016, Web designer, Frome Open Studios</li>
+      </ul>
     </section>
     <!--Education-->
     <section>
       <h1>Education</h1>
-      <p>Text here</p>
+      <h2>University</h2>
+      <ul>
+        <li>2017, 30 credits Website Technologies- Open University</li>
+        <li>2006, MA Design Innovation, Graphics & Multimedia- De Montfort University</li>
+        <li>2005, BA (Hons) Fine Art- University of Gloucestershire</li>
+      </ul>
     </section>
 
     <footer>
