Adding additional content and styling

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
 
     <header>
-      <div><img src="./assets/images/logo.svg"></div>
+      <div class="brand"></div>
       <div></div>
     </header>
     <!--Page title-->
