Updating CV content

--- a/index.html
+++ b/index.html
@@ -37,12 +37,35 @@
     <!--Profile-->
     <section>
       <h1>Profile</h1>
-      <p>Text here</p>
+      <p>As the Digital Supporter & Platform Trainer, I do a lot of varied tasks. I support our users, both through
+        training and advice, guidance and documentation. I also undertake regular Developer and Front-End Developer
+        tasks such as:</p>
+      <ul>
+        <li>implementing front-end changes to <a href="https://www.bath.ac.uk">www.bath.ac.uk</a></li>
+        <li>implementing front-end changes to <a href="https://blogs.bath.ac.uk">blogs.bath.ac.uk</a></li>
+        <li>updating apache config and implementing redirects</li>
+        <li>maintaining and improving documentation</li>
+        <li>GitLab and GitHub administration</li>
+        <li>tesing and updating WordPress versions, plugins, PHP</li>
+        <li>exporting data from Apache servers, Oracle & MySql databases</li>
+        <li>Google Analytics and Google Tag manager set-up and data analysis</li>
+      </ul>
+      <p>I'm also a trustee for Frome-based charity <a href="https://www.blackswanarts.or.uk">Black Swan Arts</a>.
+        Through that, I provide as a volunteer:</p>
+      <ul>
+        <li>web content editing for all online platforms</li>
+        <li>front-end changes and design</li>
+        <li>domain and DNS maintenance</li>
+        <li>support and set up of PCs, laptops, iPads</li>
+        <li>implementation of project management and communication tools such as Trello, Slack and Google Shared Drives
+        </li>
+      </ul>
     </section>
     <!--Skills summary-->
     <section>
       <h1>Skills summary</h1>
-      <p>Text here</p>
+      <p>I'm currently completing the Front-End Engineer, Career Path course through Codecademy Pro, mostly to solidify
+        existing skills and be up to date with current practices.</p>
     </section>
     <!--Recent employment-->
     <section>
@@ -66,6 +89,8 @@
         <li>2006, MA Design Innovation, Graphics & Multimedia- De Montfort University</li>
         <li>2005, BA (Hons) Fine Art- University of Gloucestershire</li>
       </ul>
+      <h2>School</h2>
+      <p></p>GCSEs and A levels, Stroud High School</p>
     </section>
 
     <footer>
