Correcting BSA web address

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <li>exporting data from Apache servers, Oracle & MySql databases</li>
         <li>Google Analytics and Google Tag manager set-up and data analysis</li>
       </ul>
-      <p>I'm also a trustee for Frome-based charity <a href="https://www.blackswanarts.or.uk">Black Swan Arts</a>.
+      <p>I'm also a trustee for Frome-based charity <a href="https://www.blackswanarts.org.uk">Black Swan Arts</a>.
         Through that, I provide as a volunteer:</p>
       <ul>
         <li>web content editing for all online platforms</li>
