Adding robots metadata and some skills info

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Rosie Hart CV</title>
     <meta name="description" content="Rosie's latest CV">
+    <meta name=”robots” content=”noindex”>
     <meta property="og:title" content="A Basic HTML5 Template">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.sitepoint.com/a-basic-html5-template/">
@@ -65,7 +66,20 @@
     <section>
       <h1>Skills summary</h1>
       <p>I'm currently completing the Front-End Engineer, Career Path course through Codecademy Pro, mostly to solidify
-        existing skills and be up to date with current practices.</p>
+        existing skills and be up to date with current practices. I've also had a varied background of roles, including
+        experience of managing projects and staff.</p>
+      <p>I have substantial experience with:</p>
+      <ul>
+        <li>HTML5</li>
+        <li>CSS and SCSS</li>
+        <li>JQuery and JavaScript</li>
+        <li>Apache config</li>
+        <li>Database admin, Oracle & MySql</li>
+        <li>Project management</li>
+        <li>Agile framework and practise</li>
+      </ul>
+      <li>Staff management</li>
+      </ul>
     </section>
     <!--Recent employment-->
     <section>
