Updating skills and typos

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         <li>implementing front-end changes to <a href="https://www.bath.ac.uk">www.bath.ac.uk</a></li>
         <li>implementing front-end changes to <a href="https://blogs.bath.ac.uk">blogs.bath.ac.uk</a></li>
         <li>updating apache config and implementing redirects</li>
-        <li>maintaining and improving documentation</li>
+        <li>maintaining and improving technical documentation</li>
         <li>GitLab and GitHub administration</li>
-        <li>tesing and updating WordPress versions, plugins, PHP</li>
+        <li>testing and updating WordPress versions, plugins, PHP</li>
         <li>exporting data from Apache servers, Oracle & MySql databases</li>
         <li>Google Analytics and Google Tag manager set-up and data analysis</li>
       </ul>
@@ -67,19 +67,24 @@
       <h1>Skills summary</h1>
       <p>I'm currently completing the Front-End Engineer, Career Path course through Codecademy Pro, mostly to solidify
         existing skills and be up to date with current practices. I've also had a varied background of roles, including
-        experience of managing projects and staff.</p>
+        experience with managing projects and staff.</p>
       <p>I have substantial experience with:</p>
       <ul>
         <li>HTML5</li>
         <li>CSS and SCSS</li>
         <li>JQuery and JavaScript</li>
+        <li>GitHub and GitLab</li>
+        <li>WordPress and bespoke content management systems</li>
+        <li>Shopify, eCommerce</li>
         <li>Apache config</li>
-        <li>Database admin, Oracle & MySql</li>
-        <li>Project management</li>
-        <li>Agile framework and practise</li>
+        <li>database admin, Oracle & MySql</li>
+        <li>project management</li>
+        <li>Agile framework and practice</li>
+        <li>staff management</li>
+        <li>Google Tag Manager, Optimize and Analytics</li>
       </ul>
-      <li>Staff management</li>
-      </ul>
+      <p>I also have some experience with PHP, JSON and Ruby. I regularly make changes to this code, so consider myself
+        literate, but not pro.</p>
     </section>
     <!--Recent employment-->
     <section>
@@ -99,9 +104,9 @@
       <h1>Education</h1>
       <h2>University</h2>
       <ul>
-        <li>2017, 30 credits Website Technologies- Open University</li>
-        <li>2006, MA Design Innovation, Graphics & Multimedia- De Montfort University</li>
-        <li>2005, BA (Hons) Fine Art- University of Gloucestershire</li>
+        <li>2017, 30 credits Website Technologies, Open University</li>
+        <li>2006, MA Design Innovation, Graphics & Multimedia, De Montfort University</li>
+        <li>2005, BA (Hons) Fine Art, University of Gloucestershire</li>
       </ul>
       <h2>School</h2>
       <p></p>GCSEs and A levels, Stroud High School</p>
