Adding some additional skills

--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
         <li>Agile framework and practice</li>
         <li>staff management</li>
         <li>Google Tag Manager, Optimize and Analytics</li>
+        <li>Adobe Creative Suite</li>
+        <li>Microsoft Office and Google Workspace</li>
       </ul>
       <p>I also have some experience with PHP, JSON and Ruby. I regularly make changes to this code, so consider myself
         literate, but not pro.</p>
