Adding navigation and some content stylings

--- a/index.html
+++ b/index.html
@@ -32,8 +32,14 @@
     <section>
       <div class="heading">
         <h1>Rosie Hart, CV</h1>
-        <h2></h2>
       </div>
+      <nav class="role-nav">
+        <ul>
+          <li class="role-nav-item"><a href="https://www.thenotsomiserable.co.uk">The Not So Miserable</a></li>
+          <li class="role-nav-item"><a href="https://www.bath.ac.uk"></a>University of Bath</a></li>
+          <li class="role-nav-item"><a href="https://www.blackswanarts.org.uk"></a>Black Swan Arts</a></li>
+        </ul>
+      </nav>
     </section>
     <!--Profile-->
     <section>
