Move navigation to the correct section.

--- a/index.html
+++ b/index.html
@@ -26,13 +26,6 @@
 
     <header>
       <div class="brand"></div>
-      <div></div>
-    </header>
-    <!--Page title-->
-    <section>
-      <div class="heading">
-        <h1>Rosie Hart, CV</h1>
-      </div>
       <nav class="role-nav">
         <ul>
           <li class="role-nav-item"><a href="https://www.thenotsomiserable.co.uk">The Not So Miserable</a></li>
@@ -40,6 +33,13 @@
           <li class="role-nav-item"><a href="https://www.blackswanarts.org.uk"></a>Black Swan Arts</a></li>
         </ul>
       </nav>
+    </header>
+    <!--Page title-->
+    <section>
+      <div class="heading">
+        <h1>Rosie Hart, CV</h1>
+        <h2>Information about skills and employment history.</h2>
+      </div>
     </section>
     <!--Profile-->
     <section>
