--- a/index.html
+++ b/index.html
@@ -25,14 +25,16 @@
   <body>
 
     <header>
-      <div class="brand"></div>
-      <nav class="role-nav">
-        <ul>
-          <li class="role-nav-item"><a href="https://www.thenotsomiserable.co.uk">The Not So Miserable</a></li>
-          <li class="role-nav-item"><a href="https://www.bath.ac.uk"></a>University of Bath</a></li>
-          <li class="role-nav-item"><a href="https://www.blackswanarts.org.uk"></a>Black Swan Arts</a></li>
-        </ul>
-      </nav>
+      <div class="header-wrapper"></div>
+        <div class="brand"></div>
+        <nav class="role-nav">
+          <ul>
+            <li class="role-nav-item"><a href="https://www.thenotsomiserable.co.uk">The Not So Miserable</a></li>
+            <li class="role-nav-item"><a href="https://www.bath.ac.uk"></a>University of Bath</a></li>
+            <li class="role-nav-item"><a href="https://www.blackswanarts.org.uk"></a>Black Swan Arts</a></li>
+          </ul>
+        </nav>
+    </div>
     </header>
     <!--Page title-->
     <section>
