Removing stray end tag

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
 
     <header>
-      <div class="header-wrapper"></div>
+      <div class="header-wrapper">
         <div class="brand"></div>
         <nav class="role-nav">
           <ul>
@@ -34,7 +34,7 @@
             <li class="role-nav-item"><a href="https://www.blackswanarts.org.uk"></a>Black Swan Arts</a></li>
           </ul>
         </nav>
-    </div>
+      </div>
     </header>
     <!--Page title-->
     <section>
