Add footer width and update nav links

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <nav class="role-nav">
           <ul>
             <li class="role-nav-item"><a href="https://www.thenotsomiserable.co.uk">The Not So Miserable</a></li>
-            <li class="role-nav-item"><a href="https://www.bath.ac.uk"></a>University of Bath</a></li>
-            <li class="role-nav-item"><a href="https://www.blackswanarts.org.uk"></a>Black Swan Arts</a></li>
+            <li class="role-nav-item"><a href="https://www.bath.ac.uk">University of Bath</a></li>
+            <li class="role-nav-item"><a href="https://www.blackswanarts.org.uk">Black Swan Arts</a></li>
           </ul>
         </nav>
       </div>
