--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     </section>
 
     <footer>
-      <div>
+      <div class="footer-wrapper">
         <h6>Copyright 2021</h6>
       </div>
     </footer>
