--- a/index.html
+++ b/index.html
@@ -23,110 +23,116 @@
   </head>
 
   <body>
+    <div class="container">
 
-    <header>
-      <div class="header-wrapper">
-        <div class="brand"></div>
-        <nav class="role-nav">
-          <ul>
-            <li class="role-nav-item"><a href="https://www.thenotsomiserable.co.uk">The Not So Miserable</a></li>
-            <li class="role-nav-item"><a href="https://www.bath.ac.uk">University of Bath</a></li>
-            <li class="role-nav-item"><a href="https://www.blackswanarts.org.uk">Black Swan Arts</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-    <!--Page title-->
-    <section>
-      <div class="heading">
-        <h1>Rosie Hart, CV</h1>
-        <h2>Information about skills and employment history.</h2>
-      </div>
-    </section>
-    <!--Profile-->
-    <section>
-      <h1>Profile</h1>
-      <p>As the Digital Supporter & Platform Trainer, I do a lot of varied tasks. I support our users, both through
-        training and advice, guidance and documentation. I also undertake regular Developer and Front-End Developer
-        tasks such as:</p>
-      <ul>
-        <li>implementing front-end changes to <a href="https://www.bath.ac.uk">www.bath.ac.uk</a></li>
-        <li>implementing front-end changes to <a href="https://blogs.bath.ac.uk">blogs.bath.ac.uk</a></li>
-        <li>updating apache config and implementing redirects</li>
-        <li>maintaining and improving technical documentation</li>
-        <li>GitLab and GitHub administration</li>
-        <li>testing and updating WordPress versions, plugins, PHP</li>
-        <li>exporting data from Apache servers, Oracle & MySql databases</li>
-        <li>Google Analytics and Google Tag manager set-up and data analysis</li>
-      </ul>
-      <p>I'm also a trustee for Frome-based charity <a href="https://www.blackswanarts.org.uk">Black Swan Arts</a>.
-        Through that, I provide as a volunteer:</p>
-      <ul>
-        <li>web content editing for all online platforms</li>
-        <li>front-end changes and design</li>
-        <li>domain and DNS maintenance</li>
-        <li>support and set up of PCs, laptops, iPads</li>
-        <li>implementation of project management and communication tools such as Trello, Slack and Google Shared Drives
-        </li>
-      </ul>
-    </section>
-    <!--Skills summary-->
-    <section>
-      <h1>Skills summary</h1>
-      <p>I'm currently completing the Front-End Engineer, Career Path course through Codecademy Pro, mostly to solidify
-        existing skills and be up to date with current practices. I've also had a varied background of roles, including
-        experience with managing projects and staff.</p>
-      <p>I have substantial experience with:</p>
-      <ul>
-        <li>HTML5</li>
-        <li>CSS and SCSS</li>
-        <li>JQuery and JavaScript</li>
-        <li>GitHub and GitLab</li>
-        <li>WordPress and bespoke content management systems</li>
-        <li>Shopify, eCommerce</li>
-        <li>Apache config</li>
-        <li>database admin, Oracle & MySql</li>
-        <li>project management</li>
-        <li>Agile framework and practice</li>
-        <li>staff management</li>
-        <li>Google Tag Manager, Optimize and Analytics</li>
-        <li>Adobe Creative Suite</li>
-        <li>Microsoft Office and Google Workspace</li>
-      </ul>
-      <p>I also have some experience with PHP, JSON and Ruby. I regularly make changes to this code, so consider myself
-        literate, but not pro.</p>
-    </section>
-    <!--Recent employment-->
-    <section>
-      <h1>Recent Employment</h1>
-      <ul>
-        <li>2018+, Digital Supporter & Platform Trainer, University of Bath</li>
-        <li>2012 - 2017, Programme Officer at University of Bath</li>
-      </ul>
-      <h2>Voluntary roles</h2>
-      <ul>
-        <li>2016+, Trustee, Black Swan Arts</li>
-        <li>2013 - 2016, Web designer, Frome Open Studios</li>
-      </ul>
-    </section>
-    <!--Education-->
-    <section>
-      <h1>Education</h1>
-      <h2>University</h2>
-      <ul>
-        <li>2017, 30 credits Website Technologies, Open University</li>
-        <li>2006, MA Design Innovation, Graphics & Multimedia, De Montfort University</li>
-        <li>2005, BA (Hons) Fine Art, University of Gloucestershire</li>
-      </ul>
-      <h2>School</h2>
-      <p></p>GCSEs and A levels, Stroud High School</p>
-    </section>
+      <header>
+        <div class="header-wrapper">
+          <div class="brand"></div>
+          <nav class="role-nav">
+            <ul>
+              <li class="role-nav-item"><a href="https://www.thenotsomiserable.co.uk">The Not So Miserable</a></li>
+              <li class="role-nav-item"><a href="https://www.bath.ac.uk">University of Bath</a></li>
+              <li class="role-nav-item"><a href="https://www.blackswanarts.org.uk">Black Swan Arts</a></li>
+            </ul>
+          </nav>
+        </div>
+      </header>
+      <!--Page title-->
+      <section>
+        <div class="heading">
+          <h1>Rosie Hart, CV</h1>
+          <h2>Information about skills and employment history.</h2>
+        </div>
+      </section>
+      <!--Profile-->
+      <section>
+        <h1>Profile</h1>
+        <p>As the Digital Supporter & Platform Trainer, I do a lot of varied tasks. I support our users, both through
+          training and advice, guidance and documentation. I also undertake regular Developer and Front-End Developer
+          tasks such as:</p>
+        <ul>
+          <li>implementing front-end changes to <a href="https://www.bath.ac.uk">www.bath.ac.uk</a></li>
+          <li>implementing front-end changes to <a href="https://blogs.bath.ac.uk">blogs.bath.ac.uk</a></li>
+          <li>updating apache config and implementing redirects</li>
+          <li>maintaining and improving technical documentation</li>
+          <li>GitLab and GitHub administration</li>
+          <li>testing and updating WordPress versions, plugins, PHP</li>
+          <li>exporting data from Apache servers, Oracle & MySql databases</li>
+          <li>Google Analytics and Google Tag manager set-up and data analysis</li>
+        </ul>
+        <p>I'm also a trustee for Frome-based charity <a href="https://www.blackswanarts.org.uk">Black Swan Arts</a>.
+          Through that, I provide as a volunteer:</p>
+        <ul>
+          <li>web content editing for all online platforms</li>
+          <li>front-end changes and design</li>
+          <li>domain and DNS maintenance</li>
+          <li>support and set up of PCs, laptops, iPads</li>
+          <li>implementation of project management and communication tools such as Trello, Slack and Google Shared
+            Drives
+          </li>
+        </ul>
+      </section>
+      <!--Skills summary-->
+      <section>
+        <h1>Skills summary</h1>
+        <p>I'm currently completing the Front-End Engineer, Career Path course through Codecademy Pro, mostly to
+          solidify
+          existing skills and be up to date with current practices. I've also had a varied background of roles,
+          including
+          experience with managing projects and staff.</p>
+        <p>I have substantial experience with:</p>
+        <ul>
+          <li>HTML5</li>
+          <li>CSS and SCSS</li>
+          <li>JQuery and JavaScript</li>
+          <li>GitHub and GitLab</li>
+          <li>WordPress and bespoke content management systems</li>
+          <li>Shopify, eCommerce</li>
+          <li>Apache config</li>
+          <li>database admin, Oracle & MySql</li>
+          <li>project management</li>
+          <li>Agile framework and practice</li>
+          <li>staff management</li>
+          <li>Google Tag Manager, Optimize and Analytics</li>
+          <li>Adobe Creative Suite</li>
+          <li>Microsoft Office and Google Workspace</li>
+        </ul>
+        <p>I also have some experience with PHP, JSON and Ruby. I regularly make changes to this code, so consider
+          myself
+          literate, but not pro.</p>
+      </section>
+      <!--Recent employment-->
+      <section>
+        <h1>Recent Employment</h1>
+        <ul>
+          <li>2018+, Digital Supporter & Platform Trainer, University of Bath</li>
+          <li>2012 - 2017, Programme Officer at University of Bath</li>
+        </ul>
+        <h2>Voluntary roles</h2>
+        <ul>
+          <li>2016+, Trustee, Black Swan Arts</li>
+          <li>2013 - 2016, Web designer, Frome Open Studios</li>
+        </ul>
+      </section>
+      <!--Education-->
+      <section>
+        <h1>Education</h1>
+        <h2>University</h2>
+        <ul>
+          <li>2017, 30 credits Website Technologies, Open University</li>
+          <li>2006, MA Design Innovation, Graphics & Multimedia, De Montfort University</li>
+          <li>2005, BA (Hons) Fine Art, University of Gloucestershire</li>
+        </ul>
+        <h2>School</h2>
+        <p></p>GCSEs and A levels, Stroud High School</p>
+      </section>
 
-    <footer>
-      <div class="footer-wrapper">
-        <h6>Copyright 2021</h6>
-      </div>
-    </footer>
-    <script src="js/scripts.js"></script>
+      <footer>
+        <div class="footer-wrapper">
+          <h6>Copyright 2021</h6>
+        </div>
+      </footer>
+      <script src="js/scripts.js"></script>
+    </div>
   </body>
 </html>
