Add js file and remove script which is not needed.

--- a/index.html
+++ b/index.html
@@ -7,15 +7,6 @@
     <title>Rosie Hart CV</title>
     <meta name="description" content="Rosie's latest CV">
     <meta name=”robots” content=”noindex”>
-    <meta property="og:title" content="A Basic HTML5 Template">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.sitepoint.com/a-basic-html5-template/">
-    <meta property="og:description" content="A simple HTML5 Template for new projects.">
-    <meta property="og:image" content="image.png">
-    <link rel="icon" href="/favicon.ico">
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-    <link rel="stylesheet" href="css/styles.css?v=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Molengo&display=swap" rel="stylesheet">
@@ -132,7 +123,7 @@
           <h6>Copyright 2021</h6>
         </div>
       </footer>
-      <script src="js/scripts.js"></script>
+      <script src="./assets/js/script.js"></script>
     </div>
   </body>
 </html>
