Adding some basic JavaScript for shriking header

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <section>
         <div class="heading">
           <h1>Rosie Hart, CV</h1>
-          <h2>Information about skills and employment history.</h2>
+          <h2>Information about my skills and employment history.</h2>
         </div>
       </section>
       <!--Profile-->
