Add padding for the first section due to change of sticky head behaviour

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
       </header>
       <!--Page title-->
-      <section>
+      <section id="heading-section">
         <div class="heading">
           <h1>Rosie Hart, CV</h1>
           <h2>Information about my skills and employment history.</h2>
