--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
       <footer>
         <div class="footer-wrapper">
-          <h5>Copyright 2021</h5>
+          <p>Copyright 2021</p>
         </div>
       </footer>
       <script src="./assets/js/script.js"></script>
