Update some minor text

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
         <ul>
           <li>implementing front-end changes to <a href="https://www.bath.ac.uk">www.bath.ac.uk</a></li>
           <li>implementing front-end changes to <a href="https://blogs.bath.ac.uk">blogs.bath.ac.uk</a></li>
-          <li>updating apache config and implementing redirects</li>
+          <li>updating Apache config and implementing redirects</li>
           <li>maintaining and improving technical documentation</li>
           <li>GitLab and GitHub administration</li>
           <li>testing and updating WordPress versions, plugins, PHP</li>
-          <li>exporting data from Apache servers, Oracle & MySql databases</li>
+          <li>exporting data from Apache servers, Oracle & MySQL databases</li>
           <li>Google Analytics and Google Tag manager set-up and data analysis</li>
         </ul>
         <p>I'm also a trustee for Frome-based charity <a href="https://www.blackswanarts.org.uk">Black Swan Arts</a>.
@@ -81,7 +81,7 @@
           <li>WordPress and bespoke content management systems</li>
           <li>Shopify, eCommerce</li>
           <li>Apache config</li>
-          <li>database admin, Oracle & MySql</li>
+          <li>database admin, Oracle & MySQL</li>
           <li>project management</li>
           <li>Agile framework and practice</li>
           <li>staff management</li>
