Updating header, logo swap

--- a/index.html
+++ b/index.html
@@ -75,8 +75,11 @@
         <p>I have substantial experience with:</p>
         <ul>
           <li>HTML5</li>
-          <li>CSS and SCSS</li>
+          <li>CSS and SCSS/SASS</li>
           <li>JQuery and JavaScript</li>
+          <li>Build tools such as Grunt and Gulp</li>
+          <li>User experience testing</li>
+          <li>Design tools, such as Figma and Invision</li>
           <li>GitHub and GitLab</li>
           <li>WordPress and bespoke content management systems</li>
           <li>Shopify, eCommerce</li>
