Updating header, logo swap

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <header>
         <div class="header-wrapper">
-          <div class="brand"></div>
+          <div class="logo-1 logo-1-background"></div>
           <nav class="role-nav">
             <ul>
               <li class="role-nav-item"><a href="https://www.thenotsomiserable.co.uk">The Not So Miserable</a></li>
