Updating header, logo swap

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <header>
         <div class="header-wrapper">
-          <div class="logo-1 logo-1-background"></div>
+          <div class="brand"></div>
           <nav class="role-nav">
             <ul>
               <li class="role-nav-item"><a href="https://www.thenotsomiserable.co.uk">The Not So Miserable</a></li>
@@ -75,11 +75,8 @@
         <p>I have substantial experience with:</p>
         <ul>
           <li>HTML5</li>
-          <li>CSS and SCSS/SASS</li>
+          <li>CSS and SCSS</li>
           <li>JQuery and JavaScript</li>
-          <li>Build tools such as Grunt and Gulp</li>
-          <li>User experience testing</li>
-          <li>Design tools, such as Figma and Invision</li>
           <li>GitHub and GitLab</li>
           <li>WordPress and bespoke content management systems</li>
           <li>Shopify, eCommerce</li>
