adding logo swap

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
       <header>
         <div class="header-wrapper">
-          <div class="brand"></div>
+          <div class="brand">
+            <div class="logo-1-background logo-1"></div>
+          </div>
           <nav class="role-nav">
             <ul>
               <li class="role-nav-item"><a href="https://www.thenotsomiserable.co.uk">The Not So Miserable</a></li>
@@ -77,6 +79,9 @@
           <li>HTML5</li>
           <li>CSS and SCSS</li>
           <li>JQuery and JavaScript</li>
+          <li>Build processes such as Grunt and Gulp</li>
+          <li>User experience testing</li>
+          <li>Design tools such as Figma and Invision</li>
           <li>GitHub and GitLab</li>
           <li>WordPress and bespoke content management systems</li>
           <li>Shopify, eCommerce</li>
