add id for logo div

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <header>
         <div class="header-wrapper">
           <div class="brand">
-            <div class="logo-1-background logo-1"></div>
+            <div id="site-logo" class="logo-1-background logo-1"></div>
           </div>
           <nav class="role-nav">
             <ul>
