add yet another div

--- a/index.html
+++ b/index.html
@@ -17,20 +17,22 @@
   <body>
     <div class="container">
 
-      <header>
-        <div class="header-wrapper">
-          <div class="brand">
-            <div id="site-logo" class="logo-1-background logo-1"></div>
+      <div class="header-wrapper">
+        <header>
+          <div class="header-items">
+            <div class="brand">
+              <div id="site-logo" class="logo-1-background logo-1"></div>
+            </div>
+            <nav class="role-nav">
+              <ul>
+                <li class="role-nav-item"><a href="https://www.thenotsomiserable.co.uk">The Not So Miserable</a></li>
+                <li class="role-nav-item"><a href="https://www.bath.ac.uk">University of Bath</a></li>
+                <li class="role-nav-item"><a href="https://www.blackswanarts.org.uk">Black Swan Arts</a></li>
+              </ul>
+            </nav>
           </div>
-          <nav class="role-nav">
-            <ul>
-              <li class="role-nav-item"><a href="https://www.thenotsomiserable.co.uk">The Not So Miserable</a></li>
-              <li class="role-nav-item"><a href="https://www.bath.ac.uk">University of Bath</a></li>
-              <li class="role-nav-item"><a href="https://www.blackswanarts.org.uk">Black Swan Arts</a></li>
-            </ul>
-          </nav>
-        </div>
-      </header>
+        </header>
+      </div>
       <!--Page title-->
       <section id="heading-section">
         <div class="heading">
