--- a/index.html
+++ b/index.html
@@ -12,24 +12,32 @@
     <link href="https://fonts.googleapis.com/css2?family=Molengo&display=swap" rel="stylesheet">
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <link href="./assets/css/style.css" type="text/css" rel="stylesheet">
+    <!-- Compressed Foundation CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css"
+      integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
+    <!-- Compressed Foundation JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js"
+      integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script>
   </head>
 
   <body>
     <div class="container">
-
       <div class="header-wrapper">
+
         <header>
-          <div class="header-items">
-            <div class="brand">
-              <div id="site-logo" class="logo-1-background logo-1"></div>
+          <div class="row column">
+            <div class="header-items">
+              <div class="brand">
+                <div id="site-logo" class="logo-1-background logo-1"></div>
+              </div>
+              <nav class="role-nav">
+                <ul>
+                  <li class="role-nav-item"><a href="https://www.thenotsomiserable.co.uk">The Not So Miserable</a></li>
+                  <li class="role-nav-item"><a href="https://www.bath.ac.uk">University of Bath</a></li>
+                  <li class="role-nav-item"><a href="https://www.blackswanarts.org.uk">Black Swan Arts</a></li>
+                </ul>
+              </nav>
             </div>
-            <nav class="role-nav">
-              <ul>
-                <li class="role-nav-item"><a href="https://www.thenotsomiserable.co.uk">The Not So Miserable</a></li>
-                <li class="role-nav-item"><a href="https://www.bath.ac.uk">University of Bath</a></li>
-                <li class="role-nav-item"><a href="https://www.blackswanarts.org.uk">Black Swan Arts</a></li>
-              </ul>
-            </nav>
           </div>
         </header>
       </div>
