--- a/index.html
+++ b/index.html
@@ -134,8 +134,10 @@
     </section>
 
     <footer>
-      <div class="footer-wrapper">
+      <div class="row">
+        <div class="footer-wrapper"></div>
         <p>Copyright 2021</p>
+      </div>
       </div>
     </footer>
     <script src="./assets/js/script.js"></script>
