--- a/index.html
+++ b/index.html
@@ -135,9 +135,11 @@
 
     <footer>
       <div class="row">
-        <div class="footer-wrapper"></div>
-        <p>Copyright 2021</p>
-      </div>
+        <div class="footer-wrapper">
+          <div class="footer-items">
+            <p>Copyright 2021</p>
+          </div>
+        </div>
       </div>
     </footer>
     <script src="./assets/js/script.js"></script>
