define header fonts

--- a/index.html
+++ b/index.html
@@ -39,6 +39,23 @@
           </div>
         </div>
       </header>
+      <div class="mobile-header">
+        <div class="row column">
+          <div class="mobile-header-flex">
+            <div class="brand">
+              <a href="/" class="logo-2">University of Bath</a>
+            </div>
+            <!-- Role navigation -->
+            <nav class="role-nav">
+              <ul>
+                <li class="role-nav-item"><a href="https://www.thenotsomiserable.co.uk">The Not So Miserable</a></li>
+                <li class="role-nav-item"><a href="https://www.bath.ac.uk">University of Bath</a></li>
+                <li class="role-nav-item"><a href="https://www.blackswanarts.org.uk">Black Swan Arts</a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </div>
     </div>
     <!--Page title-->
     <section id="heading-section">
