add a mobile version of the logo and some related styles

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
       <div class="mobile-header">
         <div class="row column">
           <div class="mobile-header-flex">
-            <div class="brand">
-              <a href="/" class="logo-2">University of Bath</a>
+            <div class="mobile-brand">
+              <a href="/" class="logo-3">University of Bath</a>
             </div>
             <!-- Role navigation -->
             <nav class="role-nav">
