--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="row column">
           <div class="mobile-header-flex">
             <div class="mobile-brand">
-              <div class="logo-3">University of Bath</div>
+              <div class="logo-3"></div>
             </div>
             <!-- Role navigation -->
             <nav class="role-nav">
