modified:   index.html new file:   portfolio/blog-header-after-mini.png new file:   portfolio/blog-header-after.png new file:   portfolio/blog-header-before.png new file:   portfolio/blogs.bath.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         <div class="row column">
           <div class="header-items">
             <div class="brand">
-              <div id="site-logo" class="logo-1-background logo-1"></div>
+              <a href="https://cv.thenotsomiserable.co.uk/">
+                <div id="site-logo" class="logo-1-background logo-1">Rosie Hart CV</div>
+              </a>
             </div>
             <nav class="role-nav">
               <ul>
