modified:   blogs.bath.html

--- a/blogs.bath.html
+++ b/blogs.bath.html
@@ -94,19 +94,19 @@
           <ul class="orbit-container">
             <li class="is-active orbit-slide">
               <figure class="orbit-figure">
-                <img class="orbit-image" src="portfolio/blog-header-before.png" alt="Space">
+                <img class="orbit-image" src="portfolio/blog-header-before.png?text=Slide-1" alt="Space">
                 <figcaption class="orbit-caption">The original blog header</figcaption>
               </figure>
             </li>
             <li class="orbit-slide">
               <figure class="orbit-figure">
-                <img class="orbit-image" src="portfolio/blog-header-after.png" alt="Space">
+                <img class="orbit-image" src="portfolio/blog-header-after.png?text=Slide-2" alt="Space">
                 <figcaption class="orbit-caption">The new blog header before scrolling</figcaption>
               </figure>
             </li>
             <li class="orbit-slide">
               <figure class="orbit-figure">
-                <img class="orbit-image" src="portfolio/blog-header-after-mini.png" alt="Space">
+                <img class="orbit-image" src="portfolio/blog-header-after-mini.png?text=Slide-3" alt="Space">
                 <figcaption class="orbit-caption">The new blog header after scrolling</figcaption>
               </figure>
           </ul>
