--- a/blogs.bath.html
+++ b/blogs.bath.html
@@ -136,5 +136,10 @@
     <!-- Compressed Foundation JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js"
       integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script>
+    <script>
+      $(window).on('load', function () {
+        $(document).foundation();
+      });
+    </script>
   </body>
 </html>
