modified:   blogs.bath.html

--- a/blogs.bath.html
+++ b/blogs.bath.html
@@ -145,6 +145,7 @@
           <button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
           <button data-slide="2"><span class="show-for-sr">Third slide details.</span></button>
           <button data-slide="3"><span class="show-for-sr">Third slide details.</span></button>
+          <button data-slide="4"><span class="show-for-sr">Third slide details.</span></button>
         </nav>
       </div>
     </section>
