--- a/blogs.bath.html
+++ b/blogs.bath.html
@@ -89,7 +89,8 @@
     <!--Before and after-->
     <section>
       <h1>Before and after</h1>
-      <div class="orbit" role="region" aria-label="Before and after header images" data-orbit>
+      <div class="orbit" role="region" aria-label="Before and after header images" data-orbit
+        data-options="animInFromLeft:fade-in; animInFromRight:fade-in; animOutToLeft:fade-out; animOutToRight:fade-out;">
         <div class="orbit-wrapper">
           <div class="orbit-controls">
             <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
