--- a/blogs.bath.html
+++ b/blogs.bath.html
@@ -103,7 +103,7 @@
                 <figcaption class="orbit-caption">The original blog header</figcaption>
               </figure>
             </li>
-            <li class="orbit-slide">
+            <!-- <li class="orbit-slide">
               <div>
                 <h3 class="text-center">Moving the logo to the primary header</h3>
                 <p class="text-center">The first step was to relocate the logo and resize the header. There was a lot of
@@ -112,14 +112,14 @@
                 <p class="text-center">I also changed the behaviour of the search tray, so that it was open on medium
                   breakpoint up.</p>
               </div>
-            </li>
+            </li>-->
             <li class="orbit-slide">
               <figure class="orbit-figure">
                 <img class="orbit-image" src="portfolio/blog-header-after.png?text=Slide-2" alt="Space">
                 <figcaption class="orbit-caption">The new blog header before scrolling</figcaption>
               </figure>
             </li>
-            <li class="orbit-slide">
+            <!-- <li class="orbit-slide">
               <div>
                 <h3 class="text-center">Adding the swap on scroll behaviour</h3>
                 <p class="text-center">After doing some research, I decided to add and remove classes on scroll. Because
@@ -129,7 +129,7 @@
                   has had some knock-on effects as you'd expect. But all in all, it was an interesting project and it's
                   always good to see something you worked on in action.</p>
               </div>
-            </li>
+            </li>-->
             <li class="orbit-slide">
               <figure class="orbit-figure">
                 <img class="orbit-image" src="portfolio/blog-header-after-mini.png?text=Slide-3" alt="Space">
@@ -145,8 +145,8 @@
           </button>
           <button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
           <button data-slide="2"><span class="show-for-sr">Third slide details.</span></button>
-          <button data-slide="3"><span class="show-for-sr">Third slide details.</span></button>
-          <button data-slide="4"><span class="show-for-sr">Third slide details.</span></button>
+          <!--<button data-slide="3"><span class="show-for-sr">Third slide details.</span></button>
+          <button data-slide="4"><span class="show-for-sr">Third slide details.</span></button>-->
         </nav>
       </div>
     </section>
