--- a/blogs.bath.html
+++ b/blogs.bath.html
@@ -150,43 +150,43 @@
         </nav>
       </div>
       <h1>Text only attempt</h1>
-      <div class="orbit" role="region" aria-label="Before and after header images" data-orbit>
-        <div class="orbit-wrapper">
-          <div class="orbit-controls">
-            <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
-            <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
-          </div>
-          <ul class="orbit-container">
-            <li class="is-active orbit-slide">
-              <div>
-                <h3 class="text-center">Moving the logo to the primary header</h3>
-                <p class="text-center">The first step was to relocate the logo and resize the header. There was a lot of
-                  pixel pushing involved in getting everything to measure up, as well as changing the
-                <pre>$global-width</pre>.</p>
-                <p class="text-center">I also changed the behaviour of the search tray, so that it was open on medium
-                  breakpoint up.</p>
-              </div>
-            </li>
-            <li class="orbit-slide">
-              <div>
-                <h3 class="text-center">Adding the swap on scroll behaviour</h3>
-                <p class="text-center">After doing some research, I decided to add and remove classes on scroll. Because
-                  I'd been trying to repurpose what had been previously used, I ended up having to restructure elements
-                  in order to get it working smoothly.</p>
-                <p class="text-center">There are some tidy-up tasks I need to do, because changing the global site width
-                  has had some knock-on effects as you'd expect. But all in all, it was an interesting project and it's
-                  always good to see something you worked on in action.</p>
-              </div>
-            </li>
-          </ul>
+      <div class="orbit" role="region" aria-label="Before and after header images" data-orbit data-use-m-u-i="false>
+        <div class=" orbit-wrapper">
+        <div class="orbit-controls">
+          <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
+          <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
         </div>
-        <nav class="orbit-bullets">
-          <button class="is-active" data-slide="0">
-            <span class="show-for-sr">First slide details.</span>
-            <span class="show-for-sr" data-slide-active-label>Current Slide</span>
-          </button>
-          <button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
-        </nav>
+        <ul class="orbit-container">
+          <li class="is-active orbit-slide">
+            <div>
+              <h3 class="text-center">Moving the logo to the primary header</h3>
+              <p class="text-center">The first step was to relocate the logo and resize the header. There was a lot of
+                pixel pushing involved in getting everything to measure up, as well as changing the
+              <pre>$global-width</pre>.</p>
+              <p class="text-center">I also changed the behaviour of the search tray, so that it was open on medium
+                breakpoint up.</p>
+            </div>
+          </li>
+          <li class="orbit-slide">
+            <div>
+              <h3 class="text-center">Adding the swap on scroll behaviour</h3>
+              <p class="text-center">After doing some research, I decided to add and remove classes on scroll. Because
+                I'd been trying to repurpose what had been previously used, I ended up having to restructure elements
+                in order to get it working smoothly.</p>
+              <p class="text-center">There are some tidy-up tasks I need to do, because changing the global site width
+                has had some knock-on effects as you'd expect. But all in all, it was an interesting project and it's
+                always good to see something you worked on in action.</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <nav class="orbit-bullets">
+        <button class="is-active" data-slide="0">
+          <span class="show-for-sr">First slide details.</span>
+          <span class="show-for-sr" data-slide-active-label>Current Slide</span>
+        </button>
+        <button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
+      </nav>
       </div>
     </section>
 
