modified:   blogs.bath.html

--- a/blogs.bath.html
+++ b/blogs.bath.html
@@ -86,6 +86,39 @@
         swap would get confused and if you scrolled too quickly, it would assign the wrong one. The other issue was
         that, the library's last update was in 2016. So it was time to seek an alternative.</p>
     </section>
+    <!--Tabbed section-->
+    <section>
+      <ul class="tabs" data-tabs id="example-tabs">
+        <li class="tabs-title is-active"><a href="#panel1" aria-selected="true">Tab 1</a></li>
+        <li class="tabs-title"><a data-tabs-target="panel2" href="#panel2">Tab 2</a></li>
+      </ul>
+      <div class="tabs-content" data-tabs-content="example-tabs">
+        <div class="tabs-panel is-active" id="panel1">
+          <div class="card" style="width: 300px;">
+            <div class="card-divider">
+              This is a header
+            </div>
+            <img src="portfolio/blog-header-before.png">
+            <div class="card-section">
+              <h4>This is a card.</h4>
+              <p>It has an easy to override visual style, and is appropriately subdued.</p>
+            </div>
+          </div>
+        </div>
+        <div class="tabs-panel" id="panel2">
+          <div class="card" style="width: 300px;">
+            <div class="card-divider">
+              This is a header
+            </div>
+            <img src="portfolio/blog-header-after.png">
+            <div class="card-section">
+              <h4>This is a card.</h4>
+              <p>It has an easy to override visual style, and is appropriately subdued.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!--Before and after-->
     <section>
       <h1>Before and after</h1>
