modified:   assets/css/style.css modified:   blogs.bath.html

--- a/blogs.bath.html
+++ b/blogs.bath.html
@@ -89,8 +89,8 @@
     <!--Tabbed section-->
     <section>
       <ul class="tabs" data-tabs id="example-tabs">
-        <li class="tabs-title is-active"><a href="#panel1" aria-selected="true">Tab 1</a></li>
-        <li class="tabs-title"><a data-tabs-target="panel2" href="#panel2">Tab 2</a></li>
+        <li class="tabs-title is-active"><a href="#panel1" aria-selected="true">The original header</a></li>
+        <li class="tabs-title"><a data-tabs-target="panel2" href="#panel2">Phase 1</a></li>
       </ul>
       <div class="tabs-content" data-tabs-content="example-tabs">
         <div class="tabs-panel is-active" id="panel1">
@@ -106,18 +106,52 @@
           </div>
         </div>
         <div class="tabs-panel" id="panel2">
-          <div class="card" style="width: 300px;">
+          <div class="card full-width-card" style="width: 300px;">
             <div class="card-divider">
               This is a header
             </div>
             <img src="portfolio/blog-header-after.png">
             <div class="card-section">
-              <h4>This is a card.</h4>
-              <p>It has an easy to override visual style, and is appropriately subdued.</p>
+              <h4>The original blog header</h4>
+              <p class="text-center">The first step was to relocate the logo and resize the header. There was a lot of
+                pixel pushing involved in getting everything to measure up, as well as changing the
+              <pre>$global-width</pre>.</p>
+              <p class="text-center">I also changed the behaviour of the search tray, so that it was open on medium
+                breakpoint up.</p>
             </div>
           </div>
         </div>
-      </div>
+        <div class="tabs-content" data-tabs-content="example-tabs">
+          <div class="tabs-panel is-active" id="panel2">
+            <div class="card" style="width: 300px;">
+              <div class="card-divider">
+                This is a header
+              </div>
+              <img src="portfolio/blog-header-before.png">
+              <div class="card-section">
+                <h4>This is a card.</h4>
+                <p>It has an easy to override visual style, and is appropriately subdued.</p>
+              </div>
+            </div>
+          </div>
+          <div class="tabs-panel" id="panel2">
+            <div class="card full-width-card" style="width: 300px;">
+              <div class="card-divider">
+                This is a header
+              </div>
+              <img src="portfolio/blog-header-after.png">
+              <div class="card-section">
+                <h4>Adding the swap on scroll behaviour</h4>
+                <p class="text-center">After doing some research, I decided to add and remove classes on scroll. Because
+                  I'd been trying to repurpose what had been previously used, I ended up having to restructure elements
+                  in order to get it working smoothly.</p>
+                <p class="text-center">There are some tidy-up tasks I need to do, because changing the global site width
+                  has had some knock-on effects as you'd expect. But all in all, it was an interesting project and it's
+                  always good to see something you worked on in action.</p>
+              </div>
+            </div>
+          </div>
+        </div>
     </section>
     <!--Before and after-->
     <section>
