modified:   blogs.bath.html

--- a/blogs.bath.html
+++ b/blogs.bath.html
@@ -94,7 +94,7 @@
       </ul>
       <div class="tabs-content" data-tabs-content="example-tabs">
         <div class="tabs-panel is-active" id="panel1">
-          <div class="card" style="width: 300px;">
+          <div class="card full-width-card">
             <div class="card-divider">
               This is a header
             </div>
@@ -106,7 +106,7 @@
           </div>
         </div>
         <div class="tabs-panel" id="panel2">
-          <div class="card full-width-card" style="width: 300px;">
+          <div class="card full-width-card">
             <div class="card-divider">
               This is a header
             </div>
