--- a/blogs.bath.html
+++ b/blogs.bath.html
@@ -96,14 +96,13 @@
         <div class="tabs-panel" id="panel1">
           <div class="card full-width-card">
             <div class="card-divider">
-              This is a header
+              The original header
             </div>
             <img src="portfolio/blog-header-after.png">
             <div class="card-section">
               <h4>The original blog header</h4>
               <p class="text-center">The first step was to relocate the logo and resize the header. There was a lot of
-                pixel pushing involved in getting everything to measure up, as well as changing the
-              <pre>$global-width</pre>.</p>
+                pixel pushing involved in getting everything to measure up, as well as changing the <strong>$global-width</strong>.</p>
               <p class="text-center">I also changed the behaviour of the search tray, so that it was open on medium
                 breakpoint up.</p>
             </div>
@@ -112,7 +111,7 @@
         <div class="tabs-panel" id="panel2">
           <div class="card full-width-card">
             <div class="card-divider">
-              This is a header
+              Phase 1
             </div>
             <img src="portfolio/blog-header-after.png">
             <div class="card-section">
@@ -126,6 +125,7 @@
             </div>
           </div>
         </div>
+      </div>
     </section>
     <!--Before and after-->
     <section>
