modified:   blogs.bath.html

--- a/blogs.bath.html
+++ b/blogs.bath.html
@@ -91,6 +91,7 @@
       <ul class="tabs" data-tabs id="example-tabs">
         <li class="tabs-title is-active"><a href="#panel1" aria-selected="true">The original header</a></li>
         <li class="tabs-title"><a data-tabs-target="panel2" href="#panel2">Phase 1</a></li>
+        <li class="tabs-title"><a data-tabs-target="panel2" href="#panel3">Phase 2</a></li>
       </ul>
       <div class="tabs-content" data-tabs-content="example-tabs">
         <div class="tabs-panel" id="panel1">
@@ -98,13 +99,15 @@
             <div class="card-divider">
               The original header
             </div>
-            <img src="portfolio/blog-header-after.png">
+            <img src="portfolio/blog-header-before.png">
             <div class="card-section">
               <h4>The original blog header</h4>
-              <p class="text-center">The first step was to relocate the logo and resize the header. There was a lot of
-                pixel pushing involved in getting everything to measure up, as well as changing the <strong>$global-width</strong>.</p>
-              <p class="text-center">I also changed the behaviour of the search tray, so that it was open on medium
-                breakpoint up.</p>
+              <p>The original blog header placed the logo underneath the global navigation. This seems odd placement as
+                the user has to look down the page to have it confirmed that it is an official University of Bath site.
+              </p>
+              <p>We wanted our logo to be the first thing that users see when they visit any of our blog pages, which is
+                consistent with other content. By repeating the same look and feel we increase the user's confidence in
+                our brand.</p>
             </div>
           </div>
         </div>
@@ -116,10 +119,26 @@
             <img src="portfolio/blog-header-after.png">
             <div class="card-section">
               <h4>Adding the swap on scroll behaviour</h4>
-              <p class="text-center">After doing some research, I decided to add and remove classes on scroll. Because
+              <p>The first step was to relocate the logo and resize the header. There was a lot of
+                pixel pushing involved in getting everything to measure up, as well as changing the
+                <strong>$global-width</strong>.</p>
+              <p>I also changed the behaviour of the search tray, so that it was open on medium
+                breakpoint up.</p>
+            </div>
+          </div>
+        </div>
+        <div class="tabs-panel" id="panel3">
+          <div class="card full-width-card">
+            <div class="card-divider">
+              Phase 1
+            </div>
+            <img src="portfolio/blog-header-after-mini.png">
+            <div class="card-section">
+              <h4>Adding the swap on scroll behaviour</h4>
+              <p>After doing some research, I decided to add and remove classes on scroll. Because
                 I'd been trying to repurpose what had been previously used, I ended up having to restructure elements
                 in order to get it working smoothly.</p>
-              <p class="text-center">There are some tidy-up tasks I need to do, because changing the global site width
+              <p>There are some tidy-up tasks I need to do, because changing the global site width
                 has had some knock-on effects as you'd expect. But all in all, it was an interesting project and it's
                 always good to see something you worked on in action.</p>
             </div>
