modified:   blogs.bath.html

--- a/blogs.bath.html
+++ b/blogs.bath.html
@@ -91,7 +91,7 @@
       <ul class="tabs" data-tabs id="example-tabs">
         <li class="tabs-title is-active"><a href="#panel1" aria-selected="true">The original header</a></li>
         <li class="tabs-title"><a data-tabs-target="panel2" href="#panel2">Phase 1</a></li>
-        <li class="tabs-title"><a data-tabs-target="panel2" href="#panel3">Phase 2</a></li>
+        <li class="tabs-title"><a data-tabs-target="panel3" href="#panel3">Phase 2</a></li>
       </ul>
       <div class="tabs-content" data-tabs-content="example-tabs">
         <div class="tabs-panel" id="panel1">
@@ -121,7 +121,8 @@
               <h4>Adding the swap on scroll behaviour</h4>
               <p>The first step was to relocate the logo and resize the header. There was a lot of
                 pixel pushing involved in getting everything to measure up, as well as changing the
-                <strong>$global-width</strong>.</p>
+                <strong>$global-width</strong>.
+              </p>
               <p>I also changed the behaviour of the search tray, so that it was open on medium
                 breakpoint up.</p>
             </div>
@@ -130,7 +131,7 @@
         <div class="tabs-panel" id="panel3">
           <div class="card full-width-card">
             <div class="card-divider">
-              Phase 1
+              Phase 2
             </div>
             <img src="portfolio/blog-header-after-mini.png">
             <div class="card-section">
